[package]
name = "prolog-rpg"
version = "0.1.0"
authors = ["davip"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["rt-multi-thread", "net", "io-util"]}
regex = "1.4"
lazy_static = "1.4"

[dependencies.serenity]
version = "0.10.2"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]