[package]
name = "prolog-rpg"
version = "0.1.0"
authors = ["davip"]
edition = "2018"

[dependencies]
tokio = { version = "1.2.0", features = ["rt-multi-thread", "net", "io-util", "sync"]}
tokio-util = "0.6.4"
tokio-serde = { version = "0.8.0", features = ["json"]}
tracing = "0.1.25"
tracing-subscriber = "0.2.17"
futures = "0.3"
regex = "1.4"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.3"

[dependencies.serenity]
version = "0.10.2"
default-features = false
features = ["builder", "cache", "client", "gateway", "http", "model", "utils", "rustls_backend"]